# tap-hubspot

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  constraints.txt  meltano.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci_workflow.yml  constraints.txt  release.yaml
tap_hubspot/: __init__.py  auth.py  client.py  marketing_streams.py  streams.py  tap.py
tap_hubspot_sdk/: __init__.py  auth.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py  test_utils.py
