[tool.poetry]
name = "meltano-tap-hubspot"
version = "0.0.0"
description = "`tap-hubspot` is a Singer tap for tap-hubspot, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Ethan Stein"]
keywords = [
    "ELT",
    "tap-hubspot",
]
license = "Apache-2.0"
packages = [
    { include = "tap_hubspot" },
]

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
singer-sdk = { version="^0.33.1" }
fs-s3fs = { version = "^1.1.1", optional = true }
requests = "^2.28.2"
cached-property = "^1" # Remove after Python 3.7 support is dropped

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
singer-sdk = { version="^0.33.1", extras = ["testing"] }

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_linkedin"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_hubspot"]
target-version = "py37"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_hubspot"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core==1.8.1", "poetry-dynamic-versioning==1.2.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
# CLI declaration
tap-hubspot = 'tap_hubspot.tap:TapHubspot.cli'

[tool.poetry-dynamic-versioning]
enable = true
