[tool.poetry]
name = "meltano-tap-hubspot"
version = "0.0.0"
description = "Singer tap for tap-hubspot, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Ethan Stein"]
keywords = [
    "ELT",
    "tap-hubspot",
]
license = "Apache-2.0"
packages = [
    { include = "tap_hubspot" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4"
backports-datetime-fromisoformat = {version = "==2.0.3", python = "<3.11"}
s3fs = { version = ">=2025.7.0", optional = true }
requests = "==2.32.5"
singer-sdk = { version="~=0.50.0" }

[tool.poetry.group.dev.dependencies]
pytest = ">=7"
singer-sdk = { version="~=0.50.0", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["s3fs"]

[tool.mypy]
python_version = "3.10"
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "backports.datetime_fromisoformat.*",
]

[tool.ruff]
src = ["tap_hubspot"]
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_hubspot"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core==2.1.3", "poetry-dynamic-versioning==1.9.1"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
# CLI declaration
tap-hubspot = 'tap_hubspot.tap:TapHubspot.cli'

[tool.poetry-dynamic-versioning]
enable = true
